--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,6 +34,7 @@
                 android:src="@drawable/guni_pink_logo"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"/>
+
             <com.google.android.material.card.MaterialCardView
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -45,12 +46,38 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-                    <Button
+                    <EditText
+                        android:layout_width="350dp"
+                        android:layout_height="80dp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
+                        android:id="@+id/edEmail"
+                        android:text="E-mail"
+                        android:textSize="25dp"
+                        android:textColor="@color/cardview_dark_background"/>
+
+
+                    <EditText
+                        android:layout_width="350dp"
+                        android:layout_height="80dp"
+                        app:layout_constraintTop_toBottomOf="@id/edEmail"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:id="@+id/edPasseord"
+                        android:text="Password"
+                        android:textSize="25dp"
+                        android:textColor="@color/cardview_dark_background"/>
+
+
+                    <Button
+                        android:id="@+id/btnLogin"
+                        app:layout_constraintTop_toBottomOf="@id/edPasseord"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" android:text="Login"/>
+                        android:layout_height="wrap_content"
+                        android:text="Login" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </com.google.android.material.card.MaterialCardView>
         </androidx.constraintlayout.widget.ConstraintLayout>
