--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,6 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
             <ImageView
                 android:id="@+id/img_guni"
                 app:layout_constraintTop_toTopOf="parent"
@@ -34,6 +35,7 @@
                 android:src="@drawable/guni_pink_logo"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"/>
+
 
             <com.google.android.material.card.MaterialCardView
                 app:layout_constraintStart_toStartOf="parent"
@@ -69,19 +71,32 @@
                         android:textSize="25dp"
                         android:textColor="@color/cardview_dark_background"/>
 
-
                     <Button
                         android:id="@+id/btnLogin"
                         app:layout_constraintTop_toBottomOf="@id/edPasseord"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Login" />
+                        android:layout_width="200dp"
+                        android:layout_height="65dp"
+                        android:text="Login"
+                        android:textSize="25dp"/>
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </com.google.android.material.card.MaterialCardView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Don't have an account?"
+                android:textSize="20dp"
+                android:id="@+id/tv"
+                android:layout_marginTop="400dp"
+                android:layout_marginLeft="-100dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
