--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -48,40 +49,54 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-                    <EditText
-                        android:layout_width="350dp"
-                        android:layout_height="80dp"
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/edEmail"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        android:id="@+id/edEmail"
-                        android:text="E-mail"
-                        android:textSize="25dp"
-                        android:textColor="@color/cardview_dark_background"/>
+                        app:startIconDrawable="@drawable/ic_baseline_email_24"
+                        android:hint="Email">
 
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            />
 
-                    <EditText
-                        android:layout_width="350dp"
-                        android:layout_height="80dp"
-                        app:layout_constraintTop_toBottomOf="@id/edEmail"
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/edPassword"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
                         app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/edEmail"
                         app:layout_constraintEnd_toEndOf="parent"
-                        android:id="@+id/edPasseord"
-                        android:text="Password"
-                        android:textSize="25dp"
-                        android:textColor="@color/cardview_dark_background"/>
+                        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
+                        android:hint="Password">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            />
+
+                    </com.google.android.material.textfield.TextInputLayout>
 
                     <Button
                         android:id="@+id/btnLogin"
-                        app:layout_constraintTop_toBottomOf="@id/edPasseord"
+                        app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        android:layout_width="200dp"
-                        android:layout_height="65dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:text="Login"
-                        android:textSize="25dp"/>
-
+                        android:layout_marginTop="200dp"/>
                 </androidx.constraintlayout.widget.ConstraintLayout>
+
             </com.google.android.material.card.MaterialCardView>
             <TextView
                 android:layout_width="wrap_content"
