--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -29,14 +29,14 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
             <ImageView
                 android:id="@+id/img_guni"
-
                 android:src="@drawable/guni_pink_logo"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"/>
             <com.google.android.material.card.MaterialCardView
 
-                android:layout_marginHorizontal="20dp"
+                android:layout_marginHorizontal="10dp"
                 app:cardElevation="20dp"
+                android:padding="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <LinearLayout
@@ -45,69 +45,117 @@
                     android:layout_height="wrap_content"
                     app:layout_behavior = "@string/hide_bottom_view_on_scroll_behavior">
 
-                    <EditText
-                        android:layout_width="350dp"
-                        android:layout_height="80dp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/reName"
-                        android:textColor="@color/cardview_dark_background"
-                        android:defaultFocusHighlightEnabled="true"
-                        android:text="User Full Name"
-                        android:textSize="25dp"/>
-
-                    <EditText
-                        android:layout_width="350dp"
-                        android:layout_height="80dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginVertical="5dp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:startIconDrawable="@drawable/ic_baseline_person_24"
+                        android:hint="User Full Name">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/rePhone"
-                        android:text="Phone Number"
-                        android:textSize="25dp"
-                        android:textColor="@color/cardview_dark_background"/>
-                    <Spinner
-                        android:layout_width="350dp"
-                        android:layout_height="80dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginVertical="5dp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:startIconDrawable="@drawable/ic_baseline_phone_iphone_24"
+                        android:hint="Phone Number">
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/reCity"
-                        android:textColor="@color/cardview_dark_background"/>
-
-                    <EditText
-                        android:layout_width="350dp"
-                        android:layout_height="80dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginVertical="5dp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:startIconDrawable="@drawable/ic_baseline_person_24"
+                        android:hint="City">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/reEmail"
-                        android:text="E-mail"
-                        android:textSize="25dp"
-                        android:textColor="@color/cardview_dark_background"/>
-
-                    <EditText
-                        android:layout_width="350dp"
-                        android:layout_height="80dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginVertical="5dp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:startIconDrawable="@drawable/ic_baseline_email_24"
+                        android:hint="E-mail">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/rePassword"
-                        android:text="Password"
-                        android:textSize="25dp"
-                        android:textColor="@color/cardview_dark_background"/>
-
-                    <EditText
-                        android:layout_width="350dp"
-                        android:layout_height="80dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginVertical="5dp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
+                        android:hint="Password">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/recPassword"
-                        android:text="Confirm Password"
-                        android:textSize="25dp"
-                        android:textColor="@color/cardview_dark_background"/>
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginVertical="5dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:hint="Confirm Password"
+                        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            />
+
+                    </com.google.android.material.textfield.TextInputLayout>
 
                     <Button
                         android:layout_gravity="center"
